Added skipto component

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="_content/BlazorRamp.Core/assets/css/core.min.css" />
     <link rel="stylesheet" href="_content/BlazorRamp.BusyIndicator/assets/css/busy-indicator.min.css" />
+    <link rel="stylesheet" href="_content/BlazorRamp.SkipTo/assets/css/skip-to.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
