--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <meta name="description" content="Blazor Ramp is an open-source project providing free, accessibility-first Blazor components via NuGet, each self-contained with no third-party dependencies.">
+    <meta name="keywords" content="Blazor, accessibility, components, open-source, NuGet, ARIA, live region, WASM, accessible web development, Busy Indicator, Skip To">
+    <meta name="author" content="Paul Kent">
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blazor Ramp Component Testing</title>
@@ -10,7 +14,7 @@
     <link rel="stylesheet" href="_content/BlazorRamp.Core/assets/css/core.min.css" />
     <link rel="stylesheet" href="_content/BlazorRamp.BusyIndicator/assets/css/busy-indicator.min.css" />
     <link rel="stylesheet" href="_content/BlazorRamp.SkipTo/assets/css/skip-to.min.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.min.css" />
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         (function (l) {
@@ -35,11 +39,9 @@
             </svg>
             <div class="loading-progress-text" style="grid-row:1/2;grid-column:1/2"></div>
         </div>
-
         <span id="sr-loading" role="alert" class="br-visually-hidden">
             Application loading, please wait.
         </span>
-
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script type="module" src="_content/BlazorRamp.Core/assets/js/core-live-region.js"></script>
