added switch and re-arranged structure, changed site colour

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="_content/BlazorRamp.Core/assets/css/core.min.css" />
     <link rel="stylesheet" href="_content/BlazorRamp.BusyIndicator/assets/css/busy-indicator.min.css" />
     <link rel="stylesheet" href="_content/BlazorRamp.SkipTo/assets/css/skip-to.min.css" />
+    <link rel="stylesheet" href="_content/BlazorRamp.Switch/assets/css/switch.min.css" />
     <link rel="stylesheet" href="assets/css/main.min.css" />
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
